k8s/apps/ingress-resources/default-http-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  namespace: app-space
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: default-backend
  type: ClusterIP
